<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/home_screen"
            android:textSize="25sp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="80dp"
            android:onClick="logout"
            android:text="@string/logout"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginTop="65dp"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="0px"
            android:layout_height="250dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.4"
            android:backgroundTint="@color/teal_700"
            android:onClick="browse"
            android:text="@string/browse_content_button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0px"
            android:layout_height="250dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.4"
            android:backgroundTint="@color/light_green"
            android:onClick="profile"
            android:text="@string/create_home_profile" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginTop="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button3"
            android:layout_width="0px"
            android:layout_height="250dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.4"
            android:backgroundTint="@color/light_green"
            android:onClick="initiate"
            android:text="@string/initiate_ber_assessment" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0px"
            android:layout_height="250dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.4"
            android:backgroundTint="@color/teal_700"
            android:onClick="notifications"
            android:text="@string/notifications" />

    </LinearLayout>


</LinearLayout>